# mesozoic

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  memory.x  rust-toolchain.toml
.cargo/: config
.github/workflows/: ci.yml
app/: Cargo.toml  README.md
app/snapshots/: .gitignore
app/src/: app.rs  display.rs  interface.rs  lib.rs  test_infra.rs
pinetime/: Cargo.toml  memory.x
pinetime/src/: battery.rs  ble.rs  event_loop.rs  main.rs  panic_handler.rs
pinetime/src/tasks/: ble.rs  display.rs  mod.rs  tick.rs  touch.rs
platform/: Cargo.toml  README.md  memory.x
platform/src/: backlight.rs  battery.rs  ble.rs  button.rs  display.rs  event_loop.rs  main.rs  tick.rs  timer.rs  touch.rs
sim/: Cargo.toml  README.md
sim/src/: main.rs
src/: battery.rs  ble.rs  button.rs  display.rs  haptics.rs  main.rs  nrf.rs  touch.rs
