[package]
name = "ahora"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.3"

embassy-executor = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "time"] }
embassy-time = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice", features = ["defmt", "nrf52832", "s132", "ble-peripheral", "ble-gatt-server", "ble-gatt-client", "ble-sec", "critical-section-impl"] }
nrf-softdevice-s132 = { version = "0.1.1", git = "https://github.com/embassy-rs/nrf-softdevice" }

panic-probe = { version = "0.3", features = ["print-defmt"] }

# Display
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
mipidsi = "0.7.1"

# Miscellaneous
heapless = "0.7.1"
static_cell = "1.0.0"
