[package]
name = "mesozoic-app"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8"
embedded-text = { version = "0.7", default-features = false }

arrayvec = {version = "0.7", default-features = false }

[dev-dependencies]
embedded-graphics-simulator = { version = "0.6", default-features = false }