[package]
name = "mesozoic-pinetime"
version = "0.1.0"
edition = "2021"

[dependencies]
mesozoic-app = { path = "../app" }

cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"

embassy-executor = { version = "0.5", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread", "task-arena-size-5120"] }
embassy-futures = { version = "0.1" }
embassy-nrf = { version = "0.1", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "time", "nfc-pins-as-gpio"] }
embassy-sync = { version = "0.5" }
embassy-time = { version = "0.3", features = ["defmt"] }

nrf-softdevice = { version = "0.1", features = ["defmt", "nrf52832", "s132", "ble-peripheral", "ble-gatt-server", "ble-gatt-client", "ble-sec", "critical-section-impl"] }
nrf-softdevice-s132 = { version = "0.1" }

panic-probe = { version = "0.3", features = ["print-defmt"] }

# Display
display-interface-spi = "0.4"
mipidsi = "0.7"

# Miscellaneous
arrayvec = {version = "0.7", default-features = false }
static_cell = "1.0"
